# example_prod_consm_project

./: .gitignore  README.md  setup.cfg
docker/: Dockerfile  docker-compose.yaml
docker/laser_app/: requirements.txt  server.py
tmx_pipeline/: cli.py  utils.py  workers.py
