[metadata]
description = A prototype of the system for batch tmx files processing
version = 0.0.1

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8.*

[options.packages.find]
where = .

[options.extras_require]
all =
    %(dev)s
    %(test)s
dev =
    lxml>=4.9.2
    fsspec>=2023.1.0
    tqdm>=4.64.1
    click>=8.1.3
    confluent-kafka>=2.0.2
    pyarrow>=11.0.0
    requests>=2.28.2
    black>=20.8b1
    flake8>=3.8.4
    flake8-blind-except>=0.2.0
    flake8-bugbear>=20.11.1
    flake8-builtins>=1.5.3
    flake8-commas>=2.0.0
    flake8-comprehensions>=3.3.1
    flake8-debugger>=4.0.0
    flake8-isort>=4.0.0
    flake8-mutable>=1.2.0
    flake8-print>=4.0.0
    flake8-string-format>=0.3.0
    isort>=5.6.4
    mypy>=0.800
    pre-commit>=2.10.0
test =
    pytest>=6.2.2

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[mypy]
mypy_path = .
ignore_missing_imports = True
plugins = numpy.typing.mypy_plugin
